Creating login page structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html>
     <head>
         <title>eatvisor</title>
+        <link rel="stylesheet" href="./styles/style-sheet.css">
     </head>
     <body>
-        
+        <div class="login-container">
+            <div class="body-container">
+                <div class="left-body-container"></div>
+                <div class="right-body-container"></div>
+            </div>
+        </div>
     </body>
 </html>
