Creating login form

--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>eatvisor</title>
-        <link rel="stylesheet" href="./styles/style-sheet.css">
-    </head>
-    <body>
-        <div class="login-container">
-            <div class="body-container">
-                <div class="left-body-container"></div>
-                <div class="right-body-container"></div>
+
+<head>
+    <title>eatvisor</title>
+    <link rel="stylesheet" href="./styles/style-sheet.css">
+</head>
+
+<body>
+    <div class="login-container">
+        <div class="body-container">
+            <div class="left-body-container"></div>
+
+
+
+            <div class="right-body-container">
+                <form action="" class="login-form-container">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <input type="submit" value="LogIn" class="li-btn">
+                    <a href="" style="color: white;">Create account</a>
+                </form>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
