Adding close signup form

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <div class="login-container">
-        <div class="body-container">
+    <div class="login-global-container">
+        <div class="login-body-container">
             <div class="left-body-container">Some text here <br> I dont know now <br>I'll find something</div>
 
 
@@ -30,7 +30,10 @@
             </div>
         </div>
 
+
+
         <form action="" class="signup-form-container">
+            <div class="x-icon">X</div>
             <div class="form-group">
                 <label>Username:</label>
                 <input type="text" class="form-control" required>
