Creating home page structure

--- a/home.html
+++ b/home.html
@@ -7,7 +7,14 @@
     </head>
     <body>
         <div class="home-global-container">
+            <div class="home-body-container">
+                <div class="header-container">
+                </div>
+                <div class="profile-picture-container">
 
+                </div>
+                <div class="restaurants-list-container"></div>
+            </div>
         </div> 
     </body>
 
