Creating restaurants list structure

--- a/home.html
+++ b/home.html
@@ -9,11 +9,26 @@
         <div class="home-global-container">
             <div class="home-body-container">
                 <div class="header-container">
+                    header
                 </div>
                 <div class="profile-picture-container">
+                    profile picture
 
                 </div>
-                <div class="restaurants-list-container"></div>
+                <div class="restaurants-list-container">
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item"></div>
+                </div>
             </div>
         </div> 
     </body>
