Creating list item structure

--- a/home.html
+++ b/home.html
@@ -16,15 +16,46 @@
 
                 </div>
                 <div class="restaurants-list-container">
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
+                    <div class="restaurant-list-item">
+                        <img src="./assets/images/rest-1.jpg" class="restaurant-image">
+                        <div class="item-info-container">
+                            <p>Name</p>
+                            <p>Rating</p>
+                            <p>Location</p>
+                        </div>
+                    </div>
+                    <div class="restaurant-list-item">
+                        <img src="./assets/images/rest-2.jpg" class="restaurant-image">
+                        <div class="item-info-container">
+                            <p>Name</p>
+                            <p>Rating</p>
+                            <p>Location</p>
+                        </div>
+                    </div>
+                    <div class="restaurant-list-item">
+                        <img src="./assets/images/rest-3.jpg" class="restaurant-image">
+                        <div class="item-info-container">
+                            <p>Name</p>
+                            <p>Rating</p>
+                            <p>Location</p>
+                        </div>
+                    </div>
+                    <div class="restaurant-list-item">
+                        <img src="./assets/images/rest-4.jpg" class="restaurant-image">
+                        <div class="item-info-container">
+                            <p>Name</p>
+                            <p>Rating</p>
+                            <p>Location</p>
+                        </div>
+                    </div>
+                    <div class="restaurant-list-item">
+                        <img src="./assets/images/rest-5.jpg" class="restaurant-image">
+                        <div class="item-info-container">
+                            <p>Name</p>
+                            <p>Rating</p>
+                            <p>Location</p>
+                        </div>
+                    </div>
                     <div class="restaurant-list-item"></div>
                     <div class="restaurant-list-item"></div>
                     <div class="restaurant-list-item"></div>
