creating restaurant page structure

--- a/home.html
+++ b/home.html
@@ -1,67 +1,77 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" href="./styles/style-sheet.css">
-    </head>
-    <body>
-        <div class="home-global-container">
-            <div class="home-body-container">
-                <div class="header-container">
-                    header
-                </div>
-                <div class="profile-picture-container">
-                    profile picture
+<head>
+    <title>Home</title>
+    <link rel="stylesheet" href="./styles/style-sheet.css">
+</head>
 
+<body>
+    <div class="home-global-container">
+        <div class="home-body-container">
+            <div class="header-container">
+                <div class="logo-name-container">
+                    <div class="logo-container">
+                        <img src="./assets/icons/logo.png" class="header-logo">
+                    </div>
+                    <h1>Eatvisor</h1>
                 </div>
-                <div class="restaurants-list-container">
-                    <div class="restaurant-list-item">
-                        <img src="./assets/images/rest-1.jpg" class="restaurant-image">
-                        <div class="item-info-container">
-                            <p>Name</p>
-                            <p>Rating</p>
-                            <p>Location</p>
-                        </div>
-                    </div>
-                    <div class="restaurant-list-item">
-                        <img src="./assets/images/rest-2.jpg" class="restaurant-image">
-                        <div class="item-info-container">
-                            <p>Name</p>
-                            <p>Rating</p>
-                            <p>Location</p>
-                        </div>
-                    </div>
-                    <div class="restaurant-list-item">
-                        <img src="./assets/images/rest-3.jpg" class="restaurant-image">
-                        <div class="item-info-container">
-                            <p>Name</p>
-                            <p>Rating</p>
-                            <p>Location</p>
-                        </div>
-                    </div>
-                    <div class="restaurant-list-item">
-                        <img src="./assets/images/rest-4.jpg" class="restaurant-image">
-                        <div class="item-info-container">
-                            <p>Name</p>
-                            <p>Rating</p>
-                            <p>Location</p>
-                        </div>
-                    </div>
-                    <div class="restaurant-list-item">
-                        <img src="./assets/images/rest-5.jpg" class="restaurant-image">
-                        <div class="item-info-container">
-                            <p>Name</p>
-                            <p>Rating</p>
-                            <p>Location</p>
-                        </div>
-                    </div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
-                    <div class="restaurant-list-item"></div>
+                <div class="header-menu">
+                    <div><a href="">Home</a></div>
+                    <div><a href="">LogOut</a></div>
                 </div>
             </div>
-        </div> 
-    </body>
+            <div class="profile-picture-container">
+                profile picture
+
+            </div>
+            <div class="restaurants-list-container">
+                <div class="restaurant-list-item">
+                    <img src="./assets/images/rest-1.jpg" class="restaurant-image">
+                    <div class="item-info-container">
+                        <p>Name</p>
+                        <p>Rating</p>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <div class="restaurant-list-item">
+                    <img src="./assets/images/rest-2.jpg" class="restaurant-image">
+                    <div class="item-info-container">
+                        <p>Name</p>
+                        <p>Rating</p>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <div class="restaurant-list-item">
+                    <img src="./assets/images/rest-3.jpg" class="restaurant-image">
+                    <div class="item-info-container">
+                        <p>Name</p>
+                        <p>Rating</p>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <div class="restaurant-list-item">
+                    <img src="./assets/images/rest-4.jpg" class="restaurant-image">
+                    <div class="item-info-container">
+                        <p>Name</p>
+                        <p>Rating</p>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <div class="restaurant-list-item">
+                    <img src="./assets/images/rest-5.jpg" class="restaurant-image">
+                    <div class="item-info-container">
+                        <p>Name</p>
+                        <p>Rating</p>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <div class="restaurant-list-item"></div>
+                <div class="restaurant-list-item"></div>
+                <div class="restaurant-list-item"></div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
