Changing background colors

--- a/home.html
+++ b/home.html
@@ -21,10 +21,8 @@
                     <div><a href="">LogOut</a></div>
                 </div>
             </div>
-            <div class="profile-picture-container">
-                profile picture
-
-            </div>
+            <!-- <div class="profile-picture-container"></div> -->
+            <div class="home-image-container"></div>
             <div class="restaurants-list-container">
                 <div class="restaurant-list-item">
                     <img src="./assets/images/rest-1.jpg" class="restaurant-image">
