--- a/restaurant.html
+++ b/restaurant.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="home-global-container">
+        
         <div class="home-body-container">
             <div class="header-container">
                 <div class="logo-name-container">
@@ -47,10 +48,20 @@
                     <div class="user-text-review">This one is soo bad, i didnt even try it </div>
                 </div>
                 <div class="restaurant-review">
-                    review 2
+                    <div class="user-profile-review">
+                        <div class="user-profile-review-icon"></div>
+                        <div class="user-profile-review-name">username</div>
+                    </div>
+                    <div class="user-rating-review">5</div>
+                    <div class="user-text-review">This one is soo bad, i didnt even try it </div>
                 </div>
                 <div class="restaurant-review">
-                    review 3
+                    <div class="user-profile-review">
+                        <div class="user-profile-review-icon"></div>
+                        <div class="user-profile-review-name">username</div>
+                    </div>
+                    <div class="user-rating-review">5</div>
+                    <div class="user-text-review">This one is soo bad, i didnt even try it </div>
                 </div>
                 
 
