--- a/index.html
+++ b/index.html
@@ -33,33 +33,34 @@
 
 
 
-        <form action="" class="signup-form-container">
+        <div class="signup-form-container">
             <div class="x-icon">X</div>
             <div class="form-group">
                 <label>Username:</label>
-                <input type="text" class="form-control" required>
+                <input id="su_username" type="text" class="form-control" required>
             </div>
             <div class="form-group">
                 <label>Email:</label>
-                <input type="text" class="form-control" required>
+                <input id="su_email" type="text" class="form-control" required>
             </div>
             <div class="form-group">
                 <label>Password:</label>
-                <input type="password" class="form-control" required>
+                <input id="su_password" type="password" class="form-control" required>
             </div>
             <div class="form-group">
                 <label>Confirm Password:</label>
-                <input type="password" class="form-control" required>
+                <input id="su_confirm_password" type="password" class="form-control" required>
             </div>
-            <input type="submit" value="SignUp" class="li-btn">
-        </form>
+            <button id="su_btn" class="li-btn">SignUp</button>
+            <!-- <input type="submit" value="SignUp" class="li-btn"> -->
+        </div>
 
 
 
 
     </div>
     
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./JS/login.js"></script>
 </body>
 
