--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>eatvisor</title>
     <link rel="stylesheet" href="./styles/style-sheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -16,18 +17,19 @@
                 know now <br>I'll find something</div>
 
             <div class="right-body-container">
-                <form action="" class="login-form-container">
+                <div class="login-form-container">
                     <div class="form-group">
                         <label>Email:</label>
-                        <input type="text" class="form-control" required>
+                        <input type="text" id="li_email" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Password:</label>
-                        <input type="password" class="form-control" required>
+                        <input type="password" id="li_password" class="form-control" required>
                     </div>
-                    <input type="submit" value="LogIn" class="li-btn">
+                    <button id="li_btn" class="li-btn">LogIn</button>
+                    <!-- <input type="submit" value="LogIn" class="li-btn"> -->
                     <p id="create-link">Create account</p>
-                </form>
+                </div>
             </div>
         </div>
 
@@ -60,7 +62,7 @@
 
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
     <script src="./JS/login.js"></script>
 </body>
 
