--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,7 @@
                     <h1>Eatvisor</h1>
                 </div>
                 <div class="header-menu">
+                    <div><a href="">Profile</a></div>
                     <div><a href="">Home</a></div>
                     <div><a href="">LogOut</a></div>
                 </div>
