Fetch data from db to profile page

--- a/home.html
+++ b/home.html
@@ -18,9 +18,9 @@
                     <h1>Eatvisor</h1>
                 </div>
                 <div class="header-menu">
-                    <div><a href="">Profile</a></div>
-                    <div><a href="">Home</a></div>
-                    <div><a href="">LogOut</a></div>
+                    <div><a id="header_profile">Profile</a></div>
+                    <div><a >Home</a></div>
+                    <div><a >LogOut</a></div>
                 </div>
             </div>
             
@@ -34,38 +34,6 @@
                 
                 <!-- <div class="restaurant-list-item">
                     <img src="./assets/images/rest-1.jpg" class="restaurant-image">
-                    <div class="item-info-container">
-                        <p>Name</p>
-                        <p>Rating</p>
-                        <p>Location</p>
-                    </div>
-                </div>
-                <div class="restaurant-list-item">
-                    <img src="./assets/images/rest-2.jpg" class="restaurant-image">
-                    <div class="item-info-container">
-                        <p>Name</p>
-                        <p>Rating</p>
-                        <p>Location</p>
-                    </div>
-                </div>
-                <div class="restaurant-list-item">
-                    <img src="./assets/images/rest-3.jpg" class="restaurant-image">
-                    <div class="item-info-container">
-                        <p>Name</p>
-                        <p>Rating</p>
-                        <p>Location</p>
-                    </div>
-                </div>
-                <div class="restaurant-list-item">
-                    <img src="./assets/images/rest-4.jpg" class="restaurant-image">
-                    <div class="item-info-container">
-                        <p>Name</p>
-                        <p>Rating</p>
-                        <p>Location</p>
-                    </div>
-                </div>
-                <div class="restaurant-list-item">
-                    <img src="./assets/images/rest-5.jpg" class="restaurant-image">
                     <div class="item-info-container">
                         <p>Name</p>
                         <p>Rating</p>
