--- a/restaurant.html
+++ b/restaurant.html
@@ -19,9 +19,9 @@
                     <h1>Eatvisor</h1>
                 </div>
                 <div class="header-menu">
-                    <div><a href="">Profile</a></div>
-                    <div><a href="">Home</a></div>
-                    <div><a href="">LogOut</a></div>
+                    <div><a id="header_profile">Profile</a></div>
+                    <div><a>Home</a></div>
+                    <div><a>LogOut</a></div>
                 </div>
             </div>
 
