--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
                 <h1>Eatvisor</h1>
             </div>
             <div class="header-menu">
-                <div><a>Users</a></div>
+                <div><a id="header_users">Users</a></div>
                 <div><a id="header_add">Add restaurant</a></div>
                 <div><a id="header_monitor">Monitor reviews</a></div>
                 <div><a>LogOut</a></div>
