--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="header-menu">
                     <div><a id="header_profile">Profile</a></div>
-                    <div><a >Home</a></div>
-                    <div><a >LogOut</a></div>
+                    <div><a id="header_home">Home</a></div>
+                    <div><a id="header_logout">LogOut</a></div>
                 </div>
             </div>
             
