--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,9 @@
                     <h1>Eatvisor</h1>
                 </div>
                 <div class="header-menu">
-                    <div><a href="">Profile</a></div>
-                    <div><a href="">Home</a></div>
-                    <div><a href="">LogOut</a></div>
+                    <div><a id="header_profile">Profile</a></div>
+                    <div><a id="header_home">Home</a></div>
+                    <div><a id="header_logout">LogOut</a></div>
                 </div>
             </div>
             <div class="profile-container">
