Creating profile edit form

--- a/admin-add.html
+++ b/admin-add.html
@@ -20,7 +20,7 @@
                 <div><a id="header_users">Users</a></div>
                 <div><a id="header_add">Add restaurant</a></div>
                 <div><a id="header_monitor">Monitor reviews</a></div>
-                <div><a>LogOut</a></div>
+                <div><a id="header_logout">LogOut</a></div>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <label for="myfile">Upload image:</label>
-                    <input type="file" id="myfile" name="myfile">
+                    <input type="file" id="rest_img_upload" name="restIMG">
                 </div>
                 <!-- <button class="li-btn" id="rest_img_upload">Upload Image</button> -->
                 <button class="li-btn" id="rest_add">Add</button>
