--- a/admin-reviews.html
+++ b/admin-reviews.html
@@ -18,7 +18,7 @@
                 <div><a id="header_users">Users</a></div>
                 <div><a id="header_add">Add restaurant</a></div>
                 <div><a id="header_monitor">Monitor reviews</a></div>
-                <div><a>LogOut</a></div>
+                <div><a id="header_logout">LogOut</a></div>
             </div>
         </div>
 
