Creating api for edit profile

--- a/profile.html
+++ b/profile.html
@@ -65,12 +65,12 @@
 
                 <label>Edit bio</label>
                 <!-- <input type="text" required> -->
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea name="" id="bio_area" cols="30" rows="10"></textarea>
 
                 <label for="psw">Change Image</label>
                 <input type="file">
 
-                <button >Submit</button>
+                <button id="submit_edit">Submit</button>
                 <button id="close_edit_form">Close</button>
             </div>
 
