Adding image upload

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="profile-container" id="profile_container">
-                <div class="profile-picture-container"></div>
+                <div class="profile-picture-container" id="profile_picture_container"></div>
                 <button id="edit_profile_btn" class="profile-edit-btn">Edit Profile</button>
             </div>
 
@@ -68,7 +68,7 @@
                 <textarea name="" id="bio_area" cols="30" rows="10"></textarea>
 
                 <label for="psw">Change Image</label>
-                <input type="file">
+                <input type="file" id="profile_pic_input">
 
                 <button id="submit_edit">Submit</button>
                 <button id="close_edit_form">Close</button>
