Adding restaurant image upload

--- a/restaurant.html
+++ b/restaurant.html
@@ -26,7 +26,7 @@
             </div>
 
 
-            <div class="restaurant-image-container" >
+            <div class="restaurant-image-container" id="restaurant_image_container" >
             </div>
             <div class="restaurant-info-container">
                 <div class="restaurant-info-left">
